--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.12.0
   cloud_firestore: ^4.7.0
   flutter_easyloading: ^3.0.5
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
